--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "lib/pkp"]
-	path = lib/pkp
-	url = https://github.com/pkp/pkp-lib.git
 [submodule "plugins/generic/usageStats"]
         path = plugins/generic/usageStats
         url = https://github.com/pkp/usageStats.git
@@ -50,3 +47,6 @@
 [submodule "plugins/generic/googleScholar"]
 	path = plugins/generic/googleScholar
 	url = https://github.com/pkp/googleScholar
+[submodule "lib/pkp"]
+	path = lib/pkp
+	url = https://github.com/leonardorodriguesds/pkp-lib
