--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "plugins/generic/googleScholar"]
 	path = plugins/generic/googleScholar
 	url = https://github.com/pkp/googleScholar
+[submodule "plugins/generic/ojsAdditionalFieldsEntitys"]
+	path = plugins/generic/ojsAdditionalFieldsEntitys
+	url = git@github.com:leonardorodriguesds/ojs-additional-fields-entitys.git
